HTTP Auth, migration, seed
