# internal/handler/auth/login.go
@@ -1,0 +1,33 @@
+package auth
+
+import (
+	"encoding/json"
+	v1 "github.com/asyauqi15/payslip-system/pkg/openapi/v1"
+	"github.com/go-chi/render"
+	"net/http"
+)
+
+func (h *HandlerImpl) Login(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var req v1.AuthRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		http.Error(w, "Invalid request payload", http.StatusBadRequest)
+		return
+	}
+
+	result, err := h.authUsecase.Auth(ctx, req.Email, req.Password)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	response := v1.AuthResponse{
+		AccessToken:  result.AccessToken,
+		RefreshToken: result.RefreshToken,
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	render.JSON(w, r, response)
+}
